--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,10 @@
       "type": "cppdbg",
       "request": "launch",
       "args": [],
-      "stopAtEntry": false,
-      "cwd": "c:\\Source\\home_c",
+      "stopAtEntry": true,
+      "cwd": "c:\\Source\\home_c\\home3",
       "environment": [],
-      "program": "c:\\Source\\home_c\\build\\Debug\\outDebug",
+      "program": "c:\\Source\\home_c\\home3\\main.exe",
       "internalConsoleOptions": "openOnSessionStart",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
