--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,7 @@
   "C_Cpp_Runner.excludeSearch": [],
   "C_Cpp_Runner.enableWarnings": true,
   "C_Cpp_Runner.warningsAsError": false,
-  "C_Cpp_Runner.cCompilerPath": "c:\\gcc\bin\\gcc.exe"
+  "C_Cpp_Runner.cCompilerPath": "c:\\gcc\bin\\gcc.exe",
+  "synthwave84.brightness": 0.7,
+  
 }
