--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": true,
-      "cwd": "c:\\Source\\home_c",
+      "cwd": "/home/curl/source/",
       "environment": [],
-      "program": "c:\\Source\\home_c\\home_c",
+      "program": "/home/curl/source/",
       "internalConsoleOptions": "openOnSessionStart",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
