--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,6 @@
   "C_Cpp_Runner.excludeSearch": [],
   "C_Cpp_Runner.enableWarnings": true,
   "C_Cpp_Runner.warningsAsError": false,
-  "C_Cpp_Runner.cCompilerPath": "c:\\gcc\bin\\gcc.exe",
-  "synthwave84.brightness": 0.7,
-  "powershell.buttons.showPanelMovementButtons": true,
-  
+  "C_Cpp_Runner.cCompilerPath": "/usr/bin/gcc",
+  "powershell.buttons.showPanelMovementButtons": true
 }
