--- a/Lessons/CLesson10/Makefile
+++ b/Lessons/CLesson10/Makefile
@@ -1,12 +1,12 @@
+
 APPNAME=main
 
-SCRS+=main.c
+SCRS+= main.c
 SCRS+= help.c
-
+SCRS+= structs.c
 
 all:
 	gcc $(SCRS) -o $(APPNAME)
-
 
 clean:
 	rm -f $(APPNAME)
