--- a/home10/Makefile
+++ b/home10/Makefile
@@ -1,7 +1,6 @@
 APPNAME = sensor
 
 SRCS += main.c
-SRCS += help.c
 SRCS += menu.c
 SRCS += structs.c
 SRCS += fileops.c
@@ -11,7 +10,9 @@ all:
 
 clean:
 	rm -f $(APPNAME)
+	
 install:
-	cp $(APPNAME) /home/${usr}
+	cp $(APPNAME) /home/${user}/$(APPNAME)
+
 uninstall:
-	rm -f /home/${usr}
+	rm -f /home/${user}/$(APPNAME)
